Referenced fields need extra ID components in slides: -debug

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -206,7 +206,7 @@ body {
   height: 1.3em;
   width: 100%;
   overflow: hidden;
-  color: #486F98;
+  /* color: #486F98; */
 }
 
 .related .snippet {
