Show all related data in referenced field slides

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -32,7 +32,7 @@
   #set($lastUniqueId = $thisUniqueId)
   #set($thisUniqueId = $row.getRowId())
   #set($emboldened = false)
-  #if($thisUniqueId != $lastUniqueId)
+  #if(($thisUniqueId != $lastUniqueId) || ($field.getFieldCategory() == "REFERENCED_REPORT_DATA"))
     #if($field.getFieldCategory() == "REFERENCED_REPORT_DATA")
       #set($referencedReport = $field.getReferencedReport())
       #if($referencedReport.getParentTable().equals($field.getTableContainingField()))
