--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -59,7 +59,7 @@
                     <div class="dependent_table" internaltablename="$dependentTable.getInternalTableName()" id="dependent_table_${internalTableName}_${dependentTable.getInternalTableName()}_$rowId">
                       <img src="resources/edit_nav/new_flat.png" class="go_new" />
                       <img src="resources/edit_nav/right.png" class="go_right" />
-                      <h1>$dependentTable.getSimpleName() (debug: $report)<span class="count"></span></h1>
+                      <h1>$dependentTable.getSimpleName() <span class="count"></span></h1>
                       <div class="record_snippets">
                       </div>
                     </div>
