Report tooltips fall back to table description if there is no report description

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_tooltip.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_tooltip.vm
@@ -24,4 +24,9 @@ where
 #else records<br>
 #end ##end if there are filters
 <br>
-$report.getReportDescription()
+#set($reportDescription = $report.getReportDescription())
+#if($reportDescription != "")
+  $reportDescription
+#else
+  $report.getParentTable().getTableDescription()
+#end
