--- a/gtpb_clientside/WEB-INF/templates/gui/public/posted_json.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/public/posted_json.vm
@@ -15,6 +15,4 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-Table is $sessionData.getTable()<br>
-Row ID is $sessionData.getRowId()<br>
-$view.getTableDataRowJson()
+$tableDataRowJson
