--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -202,7 +202,7 @@
 						<span>
               <a onclick="fHelp();" href="#" title="load help centre to view documentation or ask a question">help</a>
 						  &nbsp;<span style="color:#f1f2ed">|</span>&nbsp;
-						  <a href="AppController.servlet?return=gui/display_application&logout=true">logout</a>
+						  <a href="AppController.servlet?return=boot&logout=true">logout</a>
 						</span>
 					</div>
 		      </div>
