Create and attach new record to relation field: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -80,7 +80,6 @@
     #end ##
   	displayValue="$fieldDisplayValue #if($useSecondaryDisplayValue) {${secondaryDisplayValue}}#end" ##
   	internalFieldName="$internalFieldName"##
-  	internalTableName="$internalTableName"##
     displayFieldInternalName="$field.getDisplayField().getInternalFieldName()"##
     displayFieldName="$field.getDisplayField()"##
 	#if($globalEdit) ##
@@ -90,6 +89,7 @@
 	  ## so that if we choose a relation value for a particular record
 	  ## then click 'New' to add additional records, the same relation value is used
     gtpb_update_record="true" ##
+    gtpb_internaltablename="$internalTableName"##
     gtpb_rowidinternaltablename="$relatedTable.getInternalTableName()"##
     gtpb_set_row_id="$fieldValue"##
 	#end ##
