--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/combo_component.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/combo_component.vm
@@ -28,7 +28,7 @@
 		id="$field.getInternalFieldName()_dropdown_global-edit"
 	#else
 		id="$field.getInternalFieldName()_dropdown_edit" ##
-    gtpb_internaltablename="$field.getTableContainingField().getInternalTableName()" gtpb_rowid="$sessionRowId()"
+    gtpb_internaltablename="$field.getTableContainingField().getInternalTableName()" gtpb_rowid="$sessionRowId"
 	#end
 	>
     #if($field.getNotNull() && (!$fieldValue || $fieldValue != ""))
@@ -86,7 +86,7 @@
 	#if((!$globalEdit) && ($updateAsType)) 
 		onkeyup="top.oBuffer.writeBuffer(this)" 
 		gtpb_update_record="true"
-    gtpb_internaltablename="$field.getTableContainingField().getInternalTableName()" gtpb_rowid="$sessionRowId()"
+    gtpb_internaltablename="$field.getTableContainingField().getInternalTableName()" gtpb_rowid="$sessionRowId"
 	#end
 	#if($mobile_device && $updateAsType)
 		onblur="top.oBuffer.writeBuffer(this)"
