--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -162,8 +162,8 @@ body {
 
 .dependent_table {
   padding-left: 1em;
-	height: 2.5em;
-	margin-top: 0.5em;
+	height: 2.9em;
+	padding-top: 0.5em;
   border-bottom: 1px solid #F2F2F2;
   overflow: hidden;
 }
