--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -156,7 +156,7 @@ body {
   text-shadow: none;
   margin-top: 1em;
   margin-right: 10px;
-  border-left: 1px solid #486F98;
+  /* border-left: 1px solid #486F98; */
   border-bottom: 1px solid #486F98;
   background-color: white;
   border-top-left-radius: 0.8em;
