--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -46,25 +46,31 @@
               #parse("gui/edit_nav/relation_snippet.vm")
             #end
           #end
-          <div class="related_header">Add / View related data (arrow right)</div>
           ## dependent child tables
           #set($primaryKey = $sessionTable.getPrimaryKey())
           #set($dependentTables = $view.getDirectlyDependentTables($sessionTable))
+          #set($usedDependentTables = [])
           #foreach($dependentTable in $dependentTables)
             ## don't include those which are covered by cross-referenced fields
             #if(!$referencedTables.contains($dependentTable))
               #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable))
-                #foreach($report in $dependentTable.getReports())
-                  #if(($view.loggedInUserAllowedToViewReport($report)) && ($report.getReportBaseFields().contains($primaryKey)) && (!$report.getReportName().contains("dbvcalc")) && (!$report.getReportName().contains("dbvcrit")))
-                    <div class="dependent_table" internaltablename="$dependentTable.getInternalTableName()" id="dependent_table_${internalTableName}_${dependentTable.getInternalTableName()}_$rowId">
-                      <img src="resources/edit_nav/new_flat_greyscale.png" class="go_new" title="add $dependentTable.getSingularName()" />
-                      <img src="resources/edit_nav/right.png" class="go_right" title="view/edit $dependentTable.getSimpleName()" />
-                      <h1>$dependentTable.getSimpleName() <span class="count"></span></h1>
-                      <div class="record_snippets">
-                      </div>
+                #set($success = $usedDependentTables.add($dependentTable))
+              #end
+            #end
+          #end
+          #if($usedDependentTables.size() > 0)
+            <div class="related_header">Add / View related data (arrow right)</div>
+            #foreach($dependentTable in $usedDependentTables)
+              #foreach($report in $dependentTable.getReports())
+                #if(($view.loggedInUserAllowedToViewReport($report)) && ($report.getReportBaseFields().contains($primaryKey)) && (!$report.getReportName().contains("dbvcalc")) && (!$report.getReportName().contains("dbvcrit")))
+                  <div class="dependent_table" internaltablename="$dependentTable.getInternalTableName()" id="dependent_table_${internalTableName}_${dependentTable.getInternalTableName()}_$rowId">
+                    <img src="resources/edit_nav/new_flat_greyscale.png" class="go_new" title="add $dependentTable.getSingularName()" />
+                    <img src="resources/edit_nav/right.png" class="go_right" title="view/edit $dependentTable.getSimpleName()" />
+                    <h1>$dependentTable.getSimpleName() <span class="count"></span></h1>
+                    <div class="record_snippets">
                     </div>
-                    #break ## next table
-                  #end
+                  </div>
+                  #break ## next table
                 #end
               #end
             #end
