--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -70,8 +70,8 @@
     <form method="post" enctype="multipart/form-data" action="AppController.servlet" class="fileUploader">
       <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
       <input type="hidden" name="update_record" value="true" />
-      <input type="hidden" name="internaltablename" value="$sessionTable.getInternalTableName()"
-      <input type="hidden" name="rowid" value="$sessionRowId"
+      <input type="hidden" name="internaltablename" value="$sessionTable.getInternalTableName()" />
+      <input type="hidden" name="rowid" value="$sessionRowId" />
       <input type="file" name="$field.getInternalFieldName()" onchange="uploadFile(this);" class="submit-trigger" />
       <div class="upload_progress_container">
         <div class="upload_progress_bar"></div>
