--- a/gtpb_clientside/website/styles/styles.css
+++ b/gtpb_clientside/website/styles/styles.css
@@ -250,7 +250,8 @@ td.selected {
 }
 
 #urls {
-  border-radius: 2px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   border: 2px solid white;
   background: url('../images/bg-login-urls.png');
   border-top: 0px;
